--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
