--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1",
+    "gsap": "^3.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
