--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gsap": "^3.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "swiper": "^7.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
