--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,16 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "resolveJsonModule": true,
-    "strictNullChecks": false
+    "strictNullChecks": false,
     // "allowJs": true /* Allow javascript files to be compiled. Useful when migrating JS to TS */,
     // "checkJs": true /* Report errors in .js files. Works in tandem with allowJs. */,
+
+    //Create aliases to import certain modules more easily
+    "baseUrl": "./src",
+    "paths": { 
+      "@components/*": ["./components/*"]
+    }
+
   },
   "include": ["src/**/*"]
 }
