--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "netlify-cli": "^6.14.1",
     "prettier": "^2.4.1",
     "style-loader": "^3.3.0",
     "typescript": "^4.4.3",
