--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/styles": "^5.0.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-redux": "^7.1.20",
+    "framer-motion": "^5.0.0",
     "gsap": "^3.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
