--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "gsap": "^3.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.2",
     "react-redux": "^7.2.6",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
