--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
-    "@reduxjs/toolkit": "^1.6.2",
+    "@reduxjs/toolkit": "^1.7.0-beta.1",
     "@types/react-redux": "^7.1.20",
     "framer-motion": "^5.0.0",
     "gsap": "^3.8.0",
