--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "@chec/commerce.js": "^2.8.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -22,6 +23,8 @@
     "@mui/styles": "^5.0.1",
     "@reduxjs/toolkit": "^1.7.0-beta.1",
     "@types/react-redux": "^7.1.20",
+    "auth0-js": "^9.18.0",
+    "auth0-lock-passwordless": "^2.2.3",
     "framer-motion": "^5.0.0",
     "gsap": "^3.8.0",
     "react": "^17.0.2",
