--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.3",
+    "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
     "@reduxjs/toolkit": "^1.7.0-beta.1",
