--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-//REACT_APP_CHEC_PUBLIC_KEY=pk_test_34389a89fef0c2dab4428d0996f1ab5826665bace6f56
-REACT_APP_CHEC_PUBLIC_KEY=sk_test_360704e550bcf2b26bfddea1f6b0079873a0de63b96dc
+
+REACT_APP_CHEC_SECRET_KEY=sk_test_360704e550bcf2b26bfddea1f6b0079873a0de63b96dc,
+
+
+
+REACT_APP_CHEC_PUBLIC_KEY=pk_test_360701f167f53b431e7ef060e438bb6a8424c8aefe3a4
+
+
+
+                     
