--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@chec/commerce.js": "^2.8.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.8",
     "@mui/icons-material": "^5.0.3",
     "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.0.3",
@@ -28,14 +29,19 @@
     "auth0-lock-passwordless": "^2.2.3",
     "framer-motion": "^5.0.0",
     "gsap": "^3.8.0",
+    "razorpay": "^2.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.1",
     "react-intersection-observer": "^8.32.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "swiper": "^7.0.9"
+    "swiper": "^7.0.9",
+    "use-deep-compare-effect": "^1.8.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
