--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "proxy": {
+    "*": {
+      "target": "http://localhost:3001"
+    }
+  },
   "scripts": {
     "start": "webpack serve --config webpack.config.js --env env=dev",
     "build": "webpack --config webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "netlify dev"
   },
   "keywords": [],
   "author": "",
@@ -27,8 +33,11 @@
     "@types/react-redux": "^7.1.20",
     "auth0-js": "^9.18.0",
     "auth0-lock-passwordless": "^2.2.3",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
     "framer-motion": "^5.0.0",
     "gsap": "^3.8.0",
+    "path-browserify": "^1.0.1",
     "razorpay": "^2.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -39,8 +48,13 @@
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "shortid": "^2.2.16",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "swiper": "^7.0.9",
     "use-deep-compare-effect": "^1.8.1",
+    "util": "^0.12.4",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -64,7 +78,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "netlify-cli": "^6.14.1",
+    "netlify-cli": "^6.15.0",
     "prettier": "^2.4.1",
     "style-loader": "^3.3.0",
     "typescript": "^4.4.3",
